--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@ node_modules
 
 
 # local env files
+# misc
+.DS_Store
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Log files
 npm-debug.log*
